changed routes to match REST standards and added edit user
